--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2079,4 +2079,8 @@
   html {
     background-color: #fcfeff;
   }
-  
+
+/*This changes the color of the leave/delete button for users*/
+.delete-leave p {
+  background-color: red;
+}
