--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,13 +40,16 @@ body {
   flex: 3;
   display: flex;
   box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.05);
+  height: 100%;
 }
 
 .auth__form-container_image img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
 }
+
+
 
 .auth__form-container_fields-content {
   display: flex;
