--- a/client/src/App.css
+++ b/client/src/App.css
@@ -304,6 +304,8 @@ body {
 }
 
 .channel__container {
+  width: 100%;
+  height: 100%;
   background-color: #ffffff;
 }
 
@@ -1821,6 +1823,28 @@ div.rta__autocomplete.str-chat__emojisearch {
   }
 }
 
+@media screen and (max-width: 650px) {
+  .channerl-list__container-toggle {
+    right: -3%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .channel-preview__item.multi {
+    width: 150px;
+  }
+
+  .channerl-list__container-toggle {
+    right: -5%;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .channel-list__sidebar {
+    display: none;
+  }
+}
+
 #calendar-body {
   display: flex;
   margin-top: 70px; /* 50 */
@@ -1907,256 +1931,9 @@ html,
 .day:hover {
   background-color: #ff8a242d;
 }
-
 .day + .currentDay {
   background-color: #e8f4fa;
 }
-
-
-
-/* Extra small devices (phones) */
-@media only screen and (max-width: 575px) {
-  
-  .day {
-
-
-  }
-  
-}
-
-/* Small devices (tablets) */
-@media only screen and (min-width: 576px) and(min-height:715px) and (max-width: 767px) {
-  #calendar-body {
-    display: flex;
-    margin-top: 70px; /* 50 */
-    justify-content: center;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-
-  #nextButton {
-    margin-left: 2.5px;
-    width: 75px;
-    padding: 5px;
-    border-radius: 5px;
-  }
-  #backButton {
-    margin-right: 2.5px;
-    width: 75px;
-    padding: 5px;
-    border-radius: 5px;
-  }
-  #calendar-header {
-    padding: 10px;
-    font-size: 28px;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  #calendar-container {
-    width: 770px; /* 770 */
-  }
-  #weekdays {
-    width: 100%;
-    display: flex;
-  }
-  #weekdays div {
-    width: 100px;
-    padding: 10px;
-  }
-  #calendar {
-    width: 100%;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .day {
-    width: 80px;
-    height: 80px;
-    padding: 5px;
-    margin: 2px;
-  }
-}
-
-/* Medium devices (desktops) */
-@media only screen and (min-width: 768px) and (max-width: 1399px) {
-  #calendar-body {
-    display: flex;
-    margin-top: 70px; /* 50 */
-    justify-content: center;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-
-  #nextButton {
-    margin-left: 2.5px;
-    width: 75px;
-    padding: 5px;
-    border-radius: 5px;
-  }
-  #backButton {
-    margin-right: 2.5px;
-    width: 75px;
-    padding: 5px;
-    border-radius: 5px;
-  }
-  #calendar-header {
-    padding: 10px;
-    font-size: 28px;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  #calendar-container {
-    width: 770px; /* 770 */
-  }
-  #weekdays {
-    width: 100%;
-    display: flex;
-  }
-  #weekdays div {
-    width: 100px;
-    padding: 10px;
-  }
-  #calendar {
-    width: 100%;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .day {
-    width: 80px;
-    height: 80px;
-    padding: 5px;
-    margin: 2px;
-
-  }
-}
-
-/* Large devices (desktops) */
-@media only screen and (min-width: 1400px) and (max-width: 1599px) {
-  #calendar-body {
-    display: flex;
-    margin-top: 70px; 
-    justify-content: center;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-
-  #nextButton {
-    margin-left: 2.5px;
-    width: 75px;
-    padding: 5px;
-    border-radius: 5px;
-  }
-  #backButton {
-    margin-right: 2.5px;
-    width: 75px;
-    padding: 5px;
-    border-radius: 5px;
-  }
-  #calendar-header {
-    padding: 10px;
-    font-size: 28px;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  #calendar-container {
-    width: 770px; /* 770 */
-  }
-  #weekdays {
-    width: 100%;
-    display: flex;
-  }
-  #weekdays div {
-    width: 100px;
-    padding: 10px;
-  }
-  #calendar {
-    width: 100%;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .day {
-    width: 105.5px;
-    height: 108px;
-    padding: 5px;
-    margin: 2px;
-  }
-  .channel__container {
-    height: 100%;
-    width: 27%;
-    position: absolute;
-    right: 0;
-  }
-
-}
-
-/* Extra large devices (large desktops) */
-@media only screen and (min-width: 1600px) {
-  #nextButton {
-    margin-left: 2.5px;
-    width: 75px;
-    padding: 5px;
-    border-radius: 5px;
-  }
-
-  #calendar-container {
-    width: 1000px; 
-  }
-  #weekdays {
-    width: 105%;
-  }
-  #weekdays div {
-    padding: 30px;
-  }
-
-  #calendar {
-    width: 110%;
-    margin: auto;
-    display: flex;
-  }
-  .day {
-    width: 145px;
-    height: 145px;
-    padding: 5px;
-    margin: 2px;
-
-  }
-
-  .channel__container {
-    height: 100%;
-    width: 27.5%;
-    position: absolute;
-    right: 0;
-  }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .event {
   font-size: 10px;
   font-family: "Assistant";
@@ -2444,3 +2221,222 @@ html,
   90% {opacity: 1;}
   100% {opacity: 0;}
 }
+
+/*
+Extra small devices (phones)
+@media only screen and (max-width: 575px) {
+  
+  .day {
+
+
+  }
+  
+}
+
+Small devices (tablets)
+@media only screen and (min-width: 576px) and(min-height:715px) and (max-width: 767px) {
+  #calendar-body {
+    display: flex;
+    margin-top: 70px;
+    justify-content: center;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  #nextButton {
+    margin-left: 2.5px;
+    width: 75px;
+    padding: 5px;
+    border-radius: 5px;
+  }
+  #backButton {
+    margin-right: 2.5px;
+    width: 75px;
+    padding: 5px;
+    border-radius: 5px;
+  }
+  #calendar-header {
+    padding: 10px;
+    font-size: 28px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  #calendar-container {
+    width: 770px;
+  }
+  #weekdays {
+    width: 100%;
+    display: flex;
+  }
+  #weekdays div {
+    width: 100px;
+    padding: 10px;
+  }
+  #calendar {
+    width: 100%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .day {
+    width: 80px;
+    height: 80px;
+    padding: 5px;
+    margin: 2px;
+  }
+}
+
+Medium devices (desktops)
+@media only screen and (min-width: 768px) and (max-width: 1399px) {
+  #calendar-body {
+    display: flex;
+    margin-top: 70px;
+    justify-content: center;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  #nextButton {
+    margin-left: 2.5px;
+    width: 75px;
+    padding: 5px;
+    border-radius: 5px;
+  }
+  #backButton {
+    margin-right: 2.5px;
+    width: 75px;
+    padding: 5px;
+    border-radius: 5px;
+  }
+  #calendar-header {
+    padding: 10px;
+    font-size: 28px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  #calendar-container {
+    width: 770px;
+  }
+  #weekdays {
+    width: 100%;
+    display: flex;
+  }
+  #weekdays div {
+    width: 100px;
+    padding: 10px;
+  }
+  #calendar {
+    width: 100%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .day {
+    width: 80px;
+    height: 80px;
+    padding: 5px;
+    margin: 2px;
+
+  }
+}
+
+Large devices (desktops)
+@media only screen and (min-width: 1400px) and (max-width: 1599px) {
+  #calendar-body {
+    display: flex;
+    margin-top: 70px; 
+    justify-content: center;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  #nextButton {
+    margin-left: 2.5px;
+    width: 75px;
+    padding: 5px;
+    border-radius: 5px;
+  }
+  #backButton {
+    margin-right: 2.5px;
+    width: 75px;
+    padding: 5px;
+    border-radius: 5px;
+  }
+  #calendar-header {
+    padding: 10px;
+    font-size: 28px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  #calendar-container {
+    width: 770px;
+  }
+  #weekdays {
+    width: 100%;
+    display: flex;
+  }
+  #weekdays div {
+    width: 100px;
+    padding: 10px;
+  }
+  #calendar {
+    width: 100%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .day {
+    width: 100px;
+    height: 100px;
+    margin: 5px;
+  }
+  .channel__container {
+    height: 100%;
+    width: 100%;
+  }
+}
+
+Extra large devices (large desktops)
+@media only screen and (min-width: 1600px) {
+  #nextButton {
+    margin-left: 2.5px;
+    width: 75px;
+    padding: 5px;
+    border-radius: 5px;
+  }
+
+  #calendar-container {
+    width: 1000px; 
+  }
+  #weekdays {
+    width: 105%;
+  }
+  #weekdays div {
+    padding: 30px;
+  }
+
+  #calendar {
+    width: 110%;
+    margin: auto;
+    display: flex;
+  }
+  .day {
+    width: 145px;
+    height: 145px;
+    padding: 5px;
+    margin: 2px;
+
+  }
+
+  .channel__container {
+    height: 100%;
+    width: 27.5%;
+    position: absolute;
+    right: 0;
+  }
+}
+*/
