--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2144,9 +2144,9 @@ html,
 
   .channel__container {
     height: 100%;
-    width: 27.5%;
+    width: 100%;
     position: absolute;
-    right: 0;
+    left: 0;
   }
 }
 
@@ -2447,6 +2447,44 @@ html,
   }
 }
 
+.right_sidebar_container {
+  display: flex;
+  flex-direction: column;
+  right: 0;
+  width: 27.5%;
+  height: 100%;
+  justify-content: start;
+  padding: 20px 0px;
+  position: absolute;
+}
+
+.tab__content {
+  width: 100%;
+  height: 100%;
+}
+
+.tab__buttons {
+  display: flex;
+  justify-content: end;
+  gap: 0px;
+  margin: 0px;
+}
+.tab__button {
+  margin-right: 0px;
+  width: 100px;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  padding: 5px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  background-color: white;
+  color: #7ea0d6;
+}
+.tab__button.active {
+  color: white;
+  background-color: #7ea0d6;
+}
 /*
 Extra small devices (phones)
 @media only screen and (max-width: 575px) {
