--- a/client/src/App.css
+++ b/client/src/App.css
@@ -202,7 +202,7 @@ body {
   display: flex;
   flex: 1;
   /* height: 800px; */
-  height: 100%;
+  height: 115%;
   /* border-radius: 16px; */
   box-shadow: rgba(0, 0, 0, 0.33) 0px 1px 4px 0px;
 }
@@ -1936,7 +1936,9 @@ html,
   background-color: #e8f4fa;
 }
 
-/* Extra small devices (phones) */
+
+
+/*checkmark1 Extra small devices (phones) */
 @media only screen and (max-width: 575px) {
   .day {
   }
@@ -2061,31 +2063,12 @@ html,
     margin-right: 20px;
   }
 
-  #nextButton {
-    margin-left: 2.5px;
-    width: 75px;
-    padding: 5px;
-    border-radius: 5px;
-  }
-  #backButton {
-    margin-right: 2.5px;
-    width: 75px;
-    padding: 5px;
-    border-radius: 5px;
-  }
-  #calendar-header {
-    padding: 10px;
-    font-size: 28px;
-    display: flex;
-    justify-content: space-between;
-  }
-
   #calendar-container {
-    width: 770px; /* 770 */
+    width: 780px; /* 770 */
+  
   }
   #weekdays {
     width: 100%;
-    display: flex;
   }
   #weekdays div {
     width: 100px;
@@ -2104,11 +2087,27 @@ html,
     margin: 2px;
   }
   .channel__container {
-    height: 100%;
+    height: 105%;
     width: 27%;
-    position: absolute;
-    right: 0;
+    position: relative;
+    right: -5%;
   }
+
+  .right_sidebar_container {
+    display: flex;
+    flex-direction: column;
+    right: 0;
+    width: 100%;
+    height: 110%;
+    justify-content: start;
+    padding: 10px 0px;
+  }
+
+  .tab__content {
+    width: 100%;
+    height: 110%;
+  }
+
 }
 
 /* Extra large devices (large desktops) */
@@ -2146,9 +2145,14 @@ html,
     height: 100%;
     width: 100%;
     position: absolute;
-    left: 0;
+    right: 0;
   }
+  
 }
+
+
+/*end checkmark*/
+
 
 .event {
   font-size: 10px;
@@ -2460,7 +2464,7 @@ html,
 
 .tab__content {
   width: 100%;
-  height: 100%;
+  height: 110%;
 }
 
 .tab__buttons {
