--- a/client/src/App.css
+++ b/client/src/App.css
@@ -202,9 +202,10 @@ body {
   display: flex;
   flex: 1;
   /* height: 800px; */
-  height: 115%;
+  height: 100%;
   /* border-radius: 16px; */
   box-shadow: rgba(0, 0, 0, 0.33) 0px 1px 4px 0px;
+  overflow: auto;
 }
 
 .str-chat-channel-list {
@@ -1850,8 +1851,8 @@ div.rta__autocomplete.str-chat__emojisearch {
   display: flex;
   margin-top: 70px; /* 50 */
   justify-content: center;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 18px; /* 20 */
+  margin-right: 18px; /* 20 */
 }
 #calendar-body,
 html,
@@ -1916,13 +1917,13 @@ html,
   flex-wrap: wrap;
 }
 .day {
-  width: 100px;
+  width: 105px;
   padding: 10px;
-  height: 100px;
+  height: 105px;
   cursor: pointer;
   box-sizing: border-box;
   background-color: white;
-  margin: 5px;
+  margin: 2.5px;
   box-shadow: 0px 0px 3px #cbd4c2;
   display: flex;
   flex-direction: column;
@@ -1935,225 +1936,6 @@ html,
 .day + .currentDay {
   background-color: #e8f4fa;
 }
-
-
-
-/*checkmark1 Extra small devices (phones) */
-@media only screen and (max-width: 575px) {
-  .day {
-  }
-}
-
-/* Small devices (tablets) */
-@media only screen and (min-width: 576px) and(min-height:715px) and (max-width: 767px) {
-  #calendar-body {
-    display: flex;
-    margin-top: 70px; /* 50 */
-    justify-content: center;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-
-  #nextButton {
-    margin-left: 2.5px;
-    width: 75px;
-    padding: 5px;
-    border-radius: 5px;
-  }
-  #backButton {
-    margin-right: 2.5px;
-    width: 75px;
-    padding: 5px;
-    border-radius: 5px;
-  }
-  #calendar-header {
-    padding: 10px;
-    font-size: 28px;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  #calendar-container {
-    width: 770px; /* 770 */
-  }
-  #weekdays {
-    width: 100%;
-    display: flex;
-  }
-  #weekdays div {
-    width: 100px;
-    padding: 10px;
-  }
-  #calendar {
-    width: 100%;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .day {
-    width: 80px;
-    height: 80px;
-    padding: 5px;
-    margin: 2px;
-  }
-}
-
-/* Medium devices (desktops) */
-@media only screen and (min-width: 768px) and (max-width: 1399px) {
-  #calendar-body {
-    display: flex;
-    margin-top: 70px; /* 50 */
-    justify-content: center;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-
-  #nextButton {
-    margin-left: 2.5px;
-    width: 75px;
-    padding: 5px;
-    border-radius: 5px;
-  }
-  #backButton {
-    margin-right: 2.5px;
-    width: 75px;
-    padding: 5px;
-    border-radius: 5px;
-  }
-  #calendar-header {
-    padding: 10px;
-    font-size: 28px;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  #calendar-container {
-    width: 770px; /* 770 */
-  }
-  #weekdays {
-    width: 100%;
-    display: flex;
-  }
-  #weekdays div {
-    width: 100px;
-    padding: 10px;
-  }
-  #calendar {
-    width: 100%;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .day {
-    width: 80px;
-    height: 80px;
-    padding: 5px;
-    margin: 2px;
-  }
-}
-
-/* Large devices (desktops) */
-@media only screen and (min-width: 1400px) and (max-width: 1599px) {
-  #calendar-body {
-    display: flex;
-    margin-top: 70px;
-    justify-content: center;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-
-  #calendar-container {
-    width: 780px; /* 770 */
-  
-  }
-  #weekdays {
-    width: 100%;
-  }
-  #weekdays div {
-    width: 100px;
-    padding: 10px;
-  }
-  #calendar {
-    width: 100%;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .day {
-    width: 105.5px;
-    height: 108px;
-    padding: 5px;
-    margin: 2px;
-  }
-  .channel__container {
-    height: 105%;
-    width: 27%;
-    position: relative;
-    right: -5%;
-  }
-
-  .right_sidebar_container {
-    display: flex;
-    flex-direction: column;
-    right: 0;
-    width: 100%;
-    height: 110%;
-    justify-content: start;
-    padding: 10px 0px;
-  }
-
-  .tab__content {
-    width: 100%;
-    height: 110%;
-  }
-
-}
-
-/* Extra large devices (large desktops) */
-@media only screen and (min-width: 1600px) {
-  #nextButton {
-    margin-left: 2.5px;
-    width: 75px;
-    padding: 5px;
-    border-radius: 5px;
-  }
-
-  #calendar-container {
-    width: 1000px;
-  }
-  #weekdays {
-    width: 105%;
-  }
-  #weekdays div {
-    padding: 30px;
-  }
-
-  #calendar {
-    width: 110%;
-    margin: auto;
-    display: flex;
-  }
-  .day {
-    width: 145px;
-    height: 145px;
-    padding: 5px;
-    margin: 2px;
-  }
-
-  .channel__container {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    right: 0;
-  }
-  
-}
-
-
-/*end checkmark*/
-
-
 .event {
   font-size: 10px;
   font-family: "Assistant";
@@ -2490,21 +2272,17 @@ html,
   background-color: #7ea0d6;
 }
 /*
-Extra small devices (phones)
+checkmark1 Extra small devices (phones)
 @media only screen and (max-width: 575px) {
-  
   .day {
-
-
   }
-  
 }
 
 Small devices (tablets)
 @media only screen and (min-width: 576px) and(min-height:715px) and (max-width: 767px) {
   #calendar-body {
     display: flex;
-    margin-top: 70px;
+    margin-top: 70px; 50
     justify-content: center;
     margin-left: 20px;
     margin-right: 20px;
@@ -2530,7 +2308,7 @@ Small devices (tablets)
   }
 
   #calendar-container {
-    width: 770px;
+    width: 770px; 770
   }
   #weekdays {
     width: 100%;
@@ -2546,7 +2324,7 @@ Small devices (tablets)
     display: flex;
     flex-wrap: wrap;
   }
-  
+
   .day {
     width: 80px;
     height: 80px;
@@ -2559,7 +2337,7 @@ Medium devices (desktops)
 @media only screen and (min-width: 768px) and (max-width: 1399px) {
   #calendar-body {
     display: flex;
-    margin-top: 70px;
+    margin-top: 70px; 50
     justify-content: center;
     margin-left: 20px;
     margin-right: 20px;
@@ -2606,7 +2384,6 @@ Medium devices (desktops)
     height: 80px;
     padding: 5px;
     margin: 2px;
-
   }
 }
 
@@ -2614,37 +2391,18 @@ Large devices (desktops)
 @media only screen and (min-width: 1400px) and (max-width: 1599px) {
   #calendar-body {
     display: flex;
-    margin-top: 70px; 
+    margin-top: 70px;
     justify-content: center;
     margin-left: 20px;
     margin-right: 20px;
   }
 
-  #nextButton {
-    margin-left: 2.5px;
-    width: 75px;
-    padding: 5px;
-    border-radius: 5px;
-  }
-  #backButton {
-    margin-right: 2.5px;
-    width: 75px;
-    padding: 5px;
-    border-radius: 5px;
-  }
-  #calendar-header {
-    padding: 10px;
-    font-size: 28px;
-    display: flex;
-    justify-content: space-between;
-  }
-
   #calendar-container {
-    width: 770px;
+    width: 780px; 770
+  
   }
   #weekdays {
     width: 100%;
-    display: flex;
   }
   #weekdays div {
     width: 100px;
@@ -2657,14 +2415,33 @@ Large devices (desktops)
     flex-wrap: wrap;
   }
   .day {
-    width: 100px;
-    height: 100px;
-    margin: 5px;
+    width: 105.5px;
+    height: 108px;
+    padding: 5px;
+    margin: 2px;
   }
   .channel__container {
-    height: 100%;
-    width: 100%;
+    height: 105%;
+    width: 27%;
+    position: relative;
+    right: -5%;
   }
+
+  .right_sidebar_container {
+    display: flex;
+    flex-direction: column;
+    right: 0;
+    width: 100%;
+    height: 110%;
+    justify-content: start;
+    padding: 10px 0px;
+  }
+
+  .tab__content {
+    width: 100%;
+    height: 110%;
+  }
+
 }
 
 Extra large devices (large desktops)
@@ -2677,7 +2454,7 @@ Extra large devices (large desktops)
   }
 
   #calendar-container {
-    width: 1000px; 
+    width: 1000px;
   }
   #weekdays {
     width: 105%;
@@ -2696,14 +2473,15 @@ Extra large devices (large desktops)
     height: 145px;
     padding: 5px;
     margin: 2px;
-
   }
 
   .channel__container {
     height: 100%;
-    width: 27.5%;
+    width: 100%;
     position: absolute;
     right: 0;
   }
+  
 }
+end checkmark
 */
