--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,6 +46,12 @@ html::-webkit-scrollbar-track {
   background-color: white;
 }
 
+.auth__form-container_title {
+  font-family: "Raleway";
+  font-size: 25px;
+  color: white;
+}
+
 .auth__form-container_fields {
   flex: 2;
   display: flex;
@@ -83,7 +89,7 @@ html::-webkit-scrollbar-track {
 
 .auth__form-container_fields-content p {
   font-size: 1.5rem;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins";
   color: #05245a;
   font-weight: 900;
 }
